diesel_compile_tests/tests/fail/returning_old_rejected_outside_returning_clause.stderr
error[E0277]: cannot select `returning::old_impl::Old<columns::name>` from `users::table`
   --> tests/fail/returning_old_rejected_outside_returning_clause.rs:21:17
    |
 LL |         .select(old(name))
    |          ------ ^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = note: `returning::old_impl::Old<columns::name>` is no valid selection for `users::table`
help: the trait `SelectableExpression<users::table>` is not implemented for `returning::old_impl::Old<columns::name>`
      but trait `SelectableExpression<diesel::query_builder::returning::returning_query_source::ReturningQuerySource<diesel::query_builder::returning::returning_query_source::UpdateStmt, users::table>>` is implemented for it
   --> DIESEL/diesel/diesel/src/pg/returning/old_impl.rs
    |
LL | / impl<C> SelectableExpression<ReturningQuerySource<UpdateStmt, C::Table>> for Old<C>
LL | | where
LL | |     C: Column,
LL | |     Self: AppearsOnTable<ReturningQuerySource<UpdateStmt, C::Table>>,
    | |_____________________________________________________________________^
    = help: for that trait implementation, expected `ReturningQuerySource<UpdateStmt, table>`, found `users::table`
    = note: required for `SelectStatement<FromClause<table>>` to implement `SelectDsl<returning::old_impl::Old<columns::name>>`
    = note: 1 redundant requirement hidden
    = note: required for `users::table` to implement `SelectDsl<returning::old_impl::Old<columns::name>>`
note: required by a bound in `diesel::QueryDsl::select`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn select<Selection>(self, selection: Selection) -> Select<Self, Selection>
    |        ------ required by a bound in this associated function
...
LL |         Self: methods::SelectDsl<Selection>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::select`
 
    
error[E0277]: cannot select `returning::old_impl::Old<columns::name>` from `users::table`
    --> tests/fail/returning_old_rejected_outside_returning_clause.rs:23:25
     |
  LL |         .load::<String>(&mut connection)
     |          ----           ^^^^^^^^^^^^^^^ unsatisfied trait bound
     |          |
     |          required by a bound introduced by this call
     |
     = note: `returning::old_impl::Old<columns::name>` is no valid selection for `users::table`
help: the trait `SelectableExpression<users::table>` is not implemented for `returning::old_impl::Old<columns::name>`
      but trait `SelectableExpression<diesel::query_builder::returning::returning_query_source::ReturningQuerySource<diesel::query_builder::returning::returning_query_source::UpdateStmt, users::table>>` is implemented for it
    --> DIESEL/diesel/diesel/src/pg/returning/old_impl.rs
     |
 LL | / impl<C> SelectableExpression<ReturningQuerySource<UpdateStmt, C::Table>> for Old<C>
 LL | | where
 LL | |     C: Column,
 LL | |     Self: AppearsOnTable<ReturningQuerySource<UpdateStmt, C::Table>>,
     | |_____________________________________________________________________^
     = help: for that trait implementation, expected `ReturningQuerySource<UpdateStmt, table>`, found `users::table`
     = note: required for `SelectClause<Old<name>>` to implement `SelectClauseExpression<FromClause<table>>`
     = note: required for `SelectStatement<FromClause<table>, ...>` to implement `Query`
     = note: required for `SelectStatement<FromClause<table>, ...>` to implement `LoadQuery<'_, _, std::string::String>`
note: required by a bound in `load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
  
     
error[E0277]: cannot select `returning::old_impl::Old<columns::name>` from `users::table`
   --> tests/fail/returning_old_rejected_outside_returning_clause.rs:29:10
    |
 LL |         .select(old(name).nullable())
    |          ^^^^^^ unsatisfied trait bound
    |
    = note: `returning::old_impl::Old<columns::name>` is no valid selection for `users::table`
help: the trait `SelectableExpression<users::table>` is not implemented for `returning::old_impl::Old<columns::name>`
      but trait `SelectableExpression<diesel::query_builder::returning::returning_query_source::ReturningQuerySource<diesel::query_builder::returning::returning_query_source::UpdateStmt, users::table>>` is implemented for it
   --> DIESEL/diesel/diesel/src/pg/returning/old_impl.rs
    |
LL | / impl<C> SelectableExpression<ReturningQuerySource<UpdateStmt, C::Table>> for Old<C>
LL | | where
LL | |     C: Column,
LL | |     Self: AppearsOnTable<ReturningQuerySource<UpdateStmt, C::Table>>,
    | |_____________________________________________________________________^
    = help: for that trait implementation, expected `ReturningQuerySource<UpdateStmt, table>`, found `users::table`
    = note: required for `Nullable<Old<name>>` to implement `SelectableExpression<users::table>`
    = note: required for `SelectStatement<FromClause<table>>` to implement `SelectDsl<Nullable<Old<name>>>`
 
    
error[E0271]: type mismatch resolving `<table as AppearsInFromClause<OldIdent>>::Count == Once`
  --> tests/fail/returning_old_rejected_outside_returning_clause.rs:29:10
   |
LL |         .select(old(name).nullable())
   |          ^^^^^^ expected `Once`, found `Never`
   |
   = note: required for `returning::old_impl::Old<columns::name>` to implement `AppearsOnTable<users::table>`
   = note: 1 redundant requirement hidden
   = note: required for `Nullable<Old<name>>` to implement `AppearsOnTable<users::table>`
   = note: required for `Nullable<Old<name>>` to implement `SelectableExpression<users::table>`
   = note: required for `SelectStatement<FromClause<table>>` to implement `SelectDsl<Nullable<Old<name>>>`

   
error[E0271]: type mismatch resolving `<table as AppearsInFromClause<...>>::Count == Once`
  --> tests/fail/returning_old_rejected_outside_returning_clause.rs:29:10
   |
LL |         .select(old(name).nullable())
   |          ^^^^^^ type mismatch resolving `<table as AppearsInFromClause<...>>::Count == Once`
   |
note: expected this to be `diesel::query_source::Once`
  --> tests/fail/returning_old_rejected_outside_returning_clause.rs:6:1
   |
 LL | / table! {
 LL | |     users {
 LL | |         id -> Integer,
 LL | |         name -> VarChar,
LL | |     }
LL | | }
   | |_^
   = note: required for `returning::old_impl::Old<columns::name>` to implement `AppearsOnTable<users::table>`
   = note: 1 redundant requirement hidden
   = note: required for `Nullable<Old<name>>` to implement `AppearsOnTable<users::table>`
   = note: required for `Nullable<Old<name>>` to implement `SelectableExpression<users::table>`
   = note: required for `SelectStatement<FromClause<table>>` to implement `SelectDsl<Nullable<Old<name>>>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: cannot select `returning::old_impl::Old<columns::name>` from `users::table`
    --> tests/fail/returning_old_rejected_outside_returning_clause.rs:33:33
     |
  LL |         .load::<Option<String>>(&mut connection)
     |          ----                   ^^^^^^^^^^^^^^^ unsatisfied trait bound
     |          |
     |          required by a bound introduced by this call
     |
     = note: `returning::old_impl::Old<columns::name>` is no valid selection for `users::table`
help: the trait `SelectableExpression<users::table>` is not implemented for `returning::old_impl::Old<columns::name>`
      but trait `SelectableExpression<diesel::query_builder::returning::returning_query_source::ReturningQuerySource<diesel::query_builder::returning::returning_query_source::UpdateStmt, users::table>>` is implemented for it
    --> DIESEL/diesel/diesel/src/pg/returning/old_impl.rs
     |
 LL | / impl<C> SelectableExpression<ReturningQuerySource<UpdateStmt, C::Table>> for Old<C>
 LL | | where
 LL | |     C: Column,
 LL | |     Self: AppearsOnTable<ReturningQuerySource<UpdateStmt, C::Table>>,
     | |_____________________________________________________________________^
     = help: for that trait implementation, expected `ReturningQuerySource<UpdateStmt, table>`, found `users::table`
     = note: required for `Nullable<Old<name>>` to implement `SelectableExpression<users::table>`
     = note: required for `SelectClause<Nullable<Old<name>>>` to implement `SelectClauseExpression<FromClause<table>>`
     = note: required for `SelectStatement<FromClause<table>, ...>` to implement `Query`
     = note: required for `SelectStatement<FromClause<table>, ...>` to implement `LoadQuery<'_, _, Option<std::string::String>>`
note: required by a bound in `load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
  
     
error[E0271]: type mismatch resolving `<table as AppearsInFromClause<OldIdent>>::Count == Once`
    --> tests/fail/returning_old_rejected_outside_returning_clause.rs:33:33
     |
  LL |         .load::<Option<String>>(&mut connection)
     |          ----                   ^^^^^^^^^^^^^^^ expected `Once`, found `Never`
     |          |
     |          required by a bound introduced by this call
     |
     = note: required for `returning::old_impl::Old<columns::name>` to implement `AppearsOnTable<users::table>`
     = note: 1 redundant requirement hidden
     = note: required for `Nullable<Old<name>>` to implement `AppearsOnTable<users::table>`
     = note: required for `Nullable<Old<name>>` to implement `SelectableExpression<users::table>`
     = note: required for `SelectClause<Nullable<Old<name>>>` to implement `SelectClauseExpression<FromClause<table>>`
     = note: required for `SelectStatement<FromClause<table>, ...>` to implement `Query`
     = note: required for `SelectStatement<FromClause<table>, ...>` to implement `LoadQuery<'_, _, Option<std::string::String>>`
note: required by a bound in `load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
  
     
error[E0271]: type mismatch resolving `<table as AppearsInFromClause<...>>::Count == Once`
    --> tests/fail/returning_old_rejected_outside_returning_clause.rs:33:33
     |
  LL |         .load::<Option<String>>(&mut connection)
     |          ----                   ^^^^^^^^^^^^^^^ type mismatch resolving `<table as AppearsInFromClause<...>>::Count == Once`
     |          |
     |          required by a bound introduced by this call
     |
note: expected this to be `diesel::query_source::Once`
    --> tests/fail/returning_old_rejected_outside_returning_clause.rs:6:1
     |
   LL | / table! {
   LL | |     users {
   LL | |         id -> Integer,
   LL | |         name -> VarChar,
  LL | |     }
  LL | | }
     | |_^
     = note: required for `returning::old_impl::Old<columns::name>` to implement `AppearsOnTable<users::table>`
     = note: 1 redundant requirement hidden
     = note: required for `Nullable<Old<name>>` to implement `AppearsOnTable<users::table>`
     = note: required for `Nullable<Old<name>>` to implement `SelectableExpression<users::table>`
     = note: required for `SelectClause<Nullable<Old<name>>>` to implement `SelectClauseExpression<FromClause<table>>`
     = note: required for `SelectStatement<FromClause<table>, ...>` to implement `Query`
     = note: required for `SelectStatement<FromClause<table>, ...>` to implement `LoadQuery<'_, _, Option<std::string::String>>`
note: required by a bound in `load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
  
          = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
